--- a/README.rdoc
+++ b/README.rdoc
@@ -10,11 +10,11 @@ This gem is for use the API of yahoo yql with oauth support, so you can use the 
 
 === Get coords by address
 
-  Chebyte::Yahoo::GeoLoc.new(api_key, shared_key).find_by_address("100 Spear st, San Francisco, CA").coords #"37.779598, -122.420143"
+  Chebyte::GeoLoc.new(api_key, shared_key).find_by_address("100 Spear st, San Francisco, CA").coords #"37.779598, -122.420143"
 
 === Run custom yahoo sql
 
-Chebyte::Yahoo::GeoLoc.new(api_key, shared_key).find("your custom yahoo sql")
+Chebyte::GeoLoc.new(api_key, shared_key).find("your custom yahoo sql")
 
 
 == Contributing to ruby-yql
